--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,190 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* overflow-x: hidden; */
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Poppins',sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+  /* min-width: 100vw; */
+  background: linear-gradient(to right top, #7DE384, #8BFDF3);
+  display:flex;
+  align-items: center ;
+  justify-content: center;
+}
+
+.glass {
+  background: white;
+  min-height: 80vh;
+  width: 60vw;
+  background: linear-gradient(to right top, rgba(255,255,255,0.6), rgba(255,255,255,0.3));
+  backdrop-filter: blur(15px);
+  border-radius: 1.5rem;
+  border: 1px solid;
+  border-color: rgba(255,255,255,0.6);
+  z-index: 3;
+  display: flex;
+  flex-direction: column;
+}
+
+.glass h1{
+  color: #134B46;
+  font-weight: 600;
+  font-size: 2rem;
+}
+
+.circle1, .circle2 {
+  background: white;
+  background: linear-gradient(to right bottom, rgba(255,255,255,0.8), rgba(255,255,255,0.05));
+  height: 18rem;
+  width: 18rem;
+  position: absolute;
+  border-radius: 50%;
+  backdrop-filter: blur(30px);
+  bottom: 0;
+  right: 0;
+  position: fixed;
+  /* z-index: 0; */
+}
+
+.circle1{
+  top: 5%;
+  left: 15%;
+  transform: rotate(90deg);
+}
+
+.circle2 {
+  bottom: 4%;
+  right: 15%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+header{
+  margin: 0.4rem;
+}
+
+.todo-input {
+  background: linear-gradient(to right top, rgba(255,255,255,0.6), rgba(255,255,255,0.3));
+  padding: 0.5rem;
+  border: 0.1rem solid;
+  border-color: rgba(255,255,255,0.6);
+  border-radius: 1rem;
+  color: #123f49;
+  box-shadow: 0.3rem 0.3rem 0.8rem 0px #00000040;
+}
+
+.inputarea{
+  display: flex;
+  justify-content: center;
+}
+
+input[type=text] {
+  width: 11rem;
+  outline: none;
+  transition: ease-in-out, width .35s ease-in-out;
+}
+
+input[type=text]:focus {
+  width: 15rem;
+}
+
+.todo-button, .complete-btn, .trash-btn{
+  margin: 0.5rem;
+  background: none;
+  border: none;
+}
+
+.fas {
+  border: 1px solid #FFFFFF;
+  padding: 0.1rem;
+  border-radius: 50%;
+  box-shadow: 0.3rem 0.3rem 0.8rem 0px #00000040;
+  color: rgba(19, 129, 120, 0.8);
+}
+
+.fill {
+  border: 1px solid #FFFFFF;
+  padding: 0.1rem;
+  border-radius: 50%;
+  box-shadow: 0.3rem 0.3rem 0.8rem 0px #00000040;
+  background-color: rgba(19, 129, 120, 0.8);
+  color: #FFFFFF;
+}
+
+.select {
+  padding: 0.5rem;
+}
+
+select{
+  background: linear-gradient(to right top, rgba(255,255,255,0.6), rgba(255,255,255,0.3));
+  border: 0.1rem solid;
+  border-color: rgba(255,255,255,0.6);
+  padding: 0.5rem;
+  border-radius: 1rem;
+  color: #123f49;
+  box-shadow: 0.3rem 0.3rem 0.8rem 0px #00000040;
+  outline: none;
+  transition: ease-in-out, width .35s ease-in-out;
+}
+
+select option {
+  background-color: #ccfaec;
+  font-size: 0.8rem;
+}
+
+.line{
+  margin: 1rem;
+  border: 1px solid rgba(22, 152, 141, 0.2);
+}
+
+.todow{
+  margin: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.todo-item {
+  width: 13rem;
+  height: 2.5rem;
+  background: linear-gradient(to right top, rgba(255,255,255,0.6), rgba(255,255,255,0.3));
+  border: 0.1rem solid;
+  border-color: rgba(255,255,255,0.6);
+  border-radius: 1rem;
+  padding: 0.7rem;
+  list-style-type: none;
+  text-align: left;
+  color: #123f49;
+  font-size: 0.8rem;
+  box-shadow: 0.3rem 0.3rem 0.8rem 0px #00000040;
+  text-decoration: none;
+  transition: ease-in-out, width .35s ease-in-out;
+}
+
+.completed {
+  background: linear-gradient(to right top, rgba(22, 152, 141, 0.56), rgba(116, 111, 111, 0.28));
+  text-decoration: line-through;
+  -webkit-animation-name: fadeIn;
+  -webkit-animation-duration: .35s;
+  animation:fadeIn ;
+  animation-timing-function: linear;
+  animation-duration: .35s;
+  animation-fill-mode:forwards;
+}
+
+.todo-item:hover{
+  width: 13.6rem;
+}
+
+@keyframes fadeIn { 
+  from { text-decoration:none; } 
+  to { text-decoration:line-through; } }
